--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   },
   "autoload": {
     "psr-4": {
-      "League\\Flysystem\\OwnCloud": "src"
+      "League\\Flysystem\\OwnCloud\\": "src"
     }
   }
 }
